<resources>
    <string name="app_name">Online shop</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="username_taken"><font fgcolor='#EA2603'>Username is already taken</font></string>
    <string name="email_taken"><font fgcolor='#EA2603'>Email is already taken</font></string>
    <string name="phonenumber_taken"><font fgcolor='#EA2603'>Phonenumber is already taken</font></string>

    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="electronics">Electronics</string>
    <string name="expand_all">Expand All</string>
    <string name="categories">CATEGORIES</string>
    <string name="fashion">Fashion</string>
    <string name="sports">Sports</string>
    <string name="home">Home</string>
    <string name="motors">Motors</string>
    <string name="real_estate">Real Estate</string>
    <string name="entertainment">Entertainment</string>

    <string name="FAQ1">What\'s eCommerce?</string>
    <string name="FAQ2">
        eCommerce is a simple app developed to help you find what you need as fast as possible.
        Seller or a simple customer, this app works either way!</string>
    <string name="FAQ3">Various Categories</string>
    <string name="FAQ4">You can search in a variety of categories, so you probably will find what you\'re looking for.</string>
    <string name="FAQ5">No Brokers!</string>
    <string name="FAQ6">There are no brokers and you call the seller directly,
        and ofcourse both sellers and customers are responsible for all security issues.</string>

    <string name="ContactUs1">Contact us via Email</string>
    <string name="ContactUs2">Mohamad_ask@aut.ac.ir</string>
    <string name="ContactUs3">Alighasemi1@aut.ac.ir</string>

    <string name="confirm_log_out_title">Log out</string>
    <string name="confirm_log_out_message">Are you sure you want to log out?</string>
    <string name="confirm_log_out">Yes</string>
    <string name="cancel_log_out">Cancel</string>


    <string-array name="profile_dropdown_items">
        <item><font fgcolor='#d3d3d3'><font size="20">Select</font></font></item>
        <item>Edit your profile</item>
        <item>Manage your products</item>
        <item>Setting</item>
        <item>Log out</item>
    </string-array>

    <string-array name="initial_slider_values">
        <item>0</item>
        <item>10</item>
    </string-array>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="see_name_and_quantity_of_products">See name and quantity of products</string>
    <string name="see_name_of_sellers">See name of sellers</string>
    <string name="see_summation_of_products_prices">See summation of products\' prices</string>
    <string name="see_the_top_seller">See the top seller</string>
    <string name="see_users_login_count">See users\' login count</string>
    <string name="prioritize_products">Prioritize products</string>
    <string name="log_out">Log out</string>
    <string name="get_started">Get started!</string>

</resources>