<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_yellow"
    tools:context=".Home.CategoriesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:fontFamily="@font/montserrat_bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_electronics">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/electronics"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_light"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="0dp"
                android:src="@drawable/electronics" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_fashion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="25dp"
                android:text="@string/fashion"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_light"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/fashion" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_sports">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/sports"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_light"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="0dp"
                android:src="@drawable/sports" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_home">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="25dp"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_light"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/home" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_motors">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/motors"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_light"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="0dp"
                android:src="@drawable/motors" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_realstate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="25dp"
                android:text="@string/real_state"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_light"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/real_state" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_entertainment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/entertainment"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_regular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_light"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/entertainment" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>